--- a/_generated/roznamcha/index.html
+++ b/_generated/roznamcha/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{global.site_name}}</title>
+		<title>PRMS</title>
 		<link rel="stylesheet" href="/assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
 		<style type="text/css"></style>
 	</head>
 	<body>
-		{{!-- intro --}}
 
 
-		{{>footer}}
-
+		<section class="screen half">
+			<div class="center_block">
+				<p>For support visit enduro.js on <a href="https://github.com/Gottwik/Enduro">github</a></p>
+			</div>
+		</section>
 	</body>
 
 </html>
