--- a/_generated/roznamcha/index.html
+++ b/_generated/roznamcha/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>PRMS</title>
-		<link rel="stylesheet" href="/assets/css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
-		<style type="text/css"></style>
-	</head>
-	<body>
 
+<head>
+	<title>PRMS</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
+	<link rel="stylesheet" href="/assets/css/main.css"></head>
 
-		<section class="screen half">
-			<div class="center_block">
-				<p>For support visit enduro.js on <a href="https://github.com/Gottwik/Enduro">github</a></p>
-			</div>
-		</section>
-	</body>
+<body>
+
+	<section class="screen half">
+		<div class="center_block">
+			<p>Fooder</p>
+		</div>
+	</section>
+</body>
 
 </html>
