--- a/_generated/index.html
+++ b/_generated/index.html
@@ -3,15 +3,16 @@
 
 <head>
 	<title>PRMS</title>
-	<link rel="stylesheet" href="/assets/css/main.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
-	<style type="text/css"></style>
-</head>
+	<link rel="stylesheet" href="/assets/css/main.css"></head>
 
 <body>
+	
 	<section class="screen half">
 		<div class="center_block">
-			<p>For support visit enduro.js on <a href="https://github.com/Gottwik/Enduro">github</a></p>
+			<p>Fooder</p>
 		</div>
 	</section>
 </body>
